jasn/examples/invalid/invalid_timestamp.jasn
/* Invalid timestamp - missing timezone */
ts"2024-01-15T12:30:45"
